oubli sur le dernier commit :/

--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-	<html>
+	<html lang="fr">
 		<head>
 			<meta charset="utf-8" />
+            <link rel="stylesheet" href="style.css" />
 			<title>Reservia</title>
 		</head>
-		<body>
-			<header>
-                <p> <!--Logo-->
-                    <img src="image/Reservia@3x.png" alt="logo">
-                </p>
-                <p> <!--Encre navigation-->
-
-                </p> 
-                <p> <!--Lien inscription-->
-
-                </p>
-
-			</header>
-			<nav>
-
-			</nav>
+		<body> 
+            <header>
+                <img src="image/logo/Reservia-3x.png" alt="logo " class="logo" />
+                <nav>
+                    <ul>
+                        <li><a class="ancre" href="#hebergements">Hébergements</a></li>
+                        <li><a class="ancre" href="#activites">Activités</a></li>
+                        <li><a id="log" href="#">S'inscrire</a></li>
+                    </ul>
+                </nav>	
+            </header>
 			<section> <!--Bloc "Hébergements"-->
                 <p>
-                    <h1></h1> <!--Ajout id pour ancre header-->  
+                    <h1 id="Hébergements">Hébergements à Marseille</h1> <!--Ajout id pour ancre header-->  
                 </p>
                 <p>
 
@@ -34,7 +30,7 @@
 
             </article>
 			<section> <!--bloc "Activités"-->
-                <h1></h1> <!--Ajout id pour ancre header-->
+                <h1 id="Activités">Activités à Marseille</h1> <!--Ajout id pour ancre header-->
 
 			</section>
 			<footer>
